[project]
name = "techpulse"
version = "0.1.0"
description = "techpulse using crewAI"
authors = [{ name = "Dimitri.D", email = "donatien.dim@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "feedparser>=6.0.11",
]

[project.scripts]
techpulse = "techpulse.main:run"
run_crew = "techpulse.main:run"
train = "techpulse.main:train"
replay = "techpulse.main:replay"
test = "techpulse.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
